# unit-test-goblin

./: .gitignore  README.md  pyproject.toml  requirements.txt
cli/: main.py
docs/: roadmap.md  venv.md
examples/: ExampleTest.java  TestExamples.java
goblin/: analyzer.py  ascii_logo.py  config.py  detector.py  smell_types.py
src/goblin/: cli.py
tests/: test_analyzer.py  test_detector.py
