[tool.ruff]
line-length = 100
target-version = "py39"
# "E" for error codes, "F" for formatting issues, "I" for import-related issues
select = ["E", "F", "I"]
[tool.poetry]
name = "goblin"
version = "0.1.0"
description = "A CLI tool for automating and managing Java unit tests with enhanced reporting and debugging features (development version)"
authors = ["gpapachr"]
packages = [
  { include = "goblin", from = "src" }
]
[tool.poetry.scripts]
goblin = "cli.main:main"